# Learn_Python

./: LICENSE  Learn_Python.code-workspace  README.md  pyproject.toml
src/: mutitask.py
