[tool.poetry]
name = "learn_python"
version = "0.0.1"
description = "A Practice to Python"
authors = ["sh1so6 <jade.shisonoha@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
autopep8 = "^1.4"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
